package Views;

public class SolutionsView {
    
}
